Removed unused libs

--- a/hw2_immuno/hw2_ovsyannikova.ipynb
+++ b/hw2_immuno/hw2_ovsyannikova.ipynb
@@ -9,9 +9,7 @@
     "import pandas as pd\n",
     "import networkx as nx\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from Bio.SeqIO import SeqRecord\n",
-    "from Bio.Seq import Seq"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
